# 2023-CSCI1230-final-project

./: CMakeLists.txt  CMakeLists.txt.user.c783f01  README.md
nature/: nature_assets.mtl
objects/: campsite.mtl  campsite3.mtl  campsiteX.mtl  greens.mtl
resources/shaders/: fire.frag  fire.vert  object.frag  object.vert  phong.frag  phong.vert  shadow.frag  shadow.vert  texture.frag  texture.vert
scenefiles/: campsite_test_2-1.json  campsite_test_3.json  collision_test.json  combined_test.json  fire_test.json  fire_test2.json  water_test.json
scenefiles/lights-camera/required/: ball_test.json  fire_test.json  water_test.json
src/: GLPrep.cpp  GLPrep.h  ball.h  camera.cpp  fire.cpp  fire.h  mainwindow.cpp  random.h  realtime.cpp  realtime.h  settings.h  shaderloader.h
src/ball/: ball.cpp  ball.h
src/camera/: camera.cpp  camera.h
src/fire/: fire.cpp  fire.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Tet.cpp  Tet.h  Triangle.cpp  Triangle.h  Water.cpp  Water.h
src/utils/: hitObjects.h  objparser.cpp  objparser.h  rgba.h  scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h  shadowmapping.cpp  shadowmapping.h  textureMapping.cpp  textureMapping.h
